--- a/part-1/index.html
+++ b/part-1/index.html
@@ -25,7 +25,7 @@
 		    <img src="//:0" alt="" id="camera--output">
 
 		    <!-- Camera trigger -->
-		    <button id="camera--trigger">Take a picture</button>
+		    <button id="camera--trigger">Take a picture of an equation, to convert it into a new Graspable Page</button>
 
 		</main>
 
