--- a/part-1/index.html
+++ b/part-1/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- Name of the app -->
-		<title>Camera App</title>
+		<title>Import Equations into Graspable Math</title>
 
 		<!-- Link to main style sheet -->
 		<link rel="stylesheet" href="style.css"> 
