--- a/graspable/index.html
+++ b/graspable/index.html
@@ -18,7 +18,7 @@
 		    <!-- Camera trigger -->
 		    <button id="gm--homepage" onclick="window.location.href='https://dlandy.github.io/gm-camera-app/graspable/snapshot.html'">Start Doing Math!</button>
 
-            <button id="gm--session-code" onclick="window.location.href='https://gmacts.com'">I have a Student SessionCode</button>
+            <button id="gm--session-code" onclick="window.location.href='https://activities.graspablemath.com/student'">I have a Student SessionCode</button>
 
             <button id="gm--picture-page" onclick="window.location.href='https://gmacts.com'">Take me to the main Graspable Math Page</button>
 
