Moved to private repo

--- a/graspable/photo.html
+++ b/graspable/photo.html
@@ -17,9 +17,9 @@
 
 		    <!-- Camera trigger -->
 
-			<button id="gm--photo" onclick="window.location.href='snapshot.html'">Use my camera</button>
+			<button id="gm--photo" onclick="window.location.href='https://dlandy.github.io/graspable-tools/snapshot.html'">Use my camera</button>
 
-			<button id="gm--screenshot" onclick="window.location.href='screenshot.html'">Take a screenshot</button>
+			<button id="gm--screenshot" onclick="window.location.href='https://dlandy.github.io/graspable-tools/screenshot.html'">Take a screenshot</button>
 
 		    <button id="gm--myself" onclick="window.location.href='https://math.new'">Enter expressions myself</button>
 
