--- a/graspable/screenshot.html
+++ b/graspable/screenshot.html
@@ -13,10 +13,7 @@
 	<body>
         <div id="screenshot-text">
             <ol width = 400>
-        <li> Copy image data into clipboard (copy an image, or use cmd-ctrl-shift-4 on a mac to take a screenshot).
-         Make sure that one clear equation appears in frame, by itself. </li>
-        <li> Press Ctrl+V into box below: </li>
-        <li> Press the "Send to GM" button </li>
+        Please go to <a href = "https://dlandy.github.io/graspable-tools/screenshot.html">this repo</a> for this functionality.
     </ol>
     </div> 
         <div id="screenshot-box">
