--- a/graspable/snapshot.html
+++ b/graspable/snapshot.html
@@ -12,22 +12,7 @@
 	</head>
 	<body>
 
-		<!-- Camera -->
-		<main id="camera">
-
-		    <!-- Camera sensor -->
-		    <canvas id="camera--sensor"></canvas>
-		    
-		    <!-- Camera view -->
-		    <video id="camera--view" autoplay playsinline></video>
-		    
-		    <!-- Camera output -->
-		    <img src="//:0" alt="" id="camera--output">
-
-		    <!-- Camera trigger -->
-		    <button id="camera--trigger">Take a picture of an equation, to convert it into a new Graspable Page</button>
-
-		</main>
+        Update: Please go to <a href = "https://dlandy.github.io/graspable-tools/snapshot.html">this repo</a> for this functionality.
 
 		<!-- Reference to your JavaScript file -->
 		<script src="app.js"></script> 
